--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Users\\colaco\\Documents\\Projectos CCS\\Sub\\idart\\idart\\lib\\mysql-connector-java-5.1.45-bin.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=/home/docker/Documents/Projectos/CCS/idart/lib/mysql-connector-java-5.1.45-bin.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\colaco\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=/home/docker/.netbeans/8.2/build.properties
