--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -97,15 +97,15 @@ file.reference.slf4j-api-1.6.1.jar=lib\\slf4j-api-1.6.1.jar
 file.reference.slf4j-log4j12-1.6.0.jar=lib\\slf4j-log4j12-1.6.0.jar
 file.reference.stableupdate-2.0.jar=lib\\stableupdate-2.0.jar
 file.reference.stableupdate.application-1.0.jar=lib\\stableupdate.application-1.0.jar
-file.reference.swingx-action-1.6.5-1.jar=/home/docker/Documents/Projectos/CCS/ccsidart/lib/swingx-action-1.6.5-1.jar
-file.reference.swingx-autocomplete-1.6.5-1.jar=/home/docker/Documents/Projectos/CCS/ccsidart/lib/swingx-autocomplete-1.6.5-1.jar
-file.reference.swingx-common-1.6.5-1.jar=/home/docker/Documents/Projectos/CCS/ccsidart/lib/swingx-common-1.6.5-1.jar
-file.reference.swingx-core-1.6.5-1.jar=/home/docker/Documents/Projectos/CCS/ccsidart/lib/swingx-core-1.6.5-1.jar
-file.reference.swingx-graphics-1.6.5-1.jar=/home/docker/Documents/Projectos/CCS/ccsidart/lib/swingx-graphics-1.6.5-1.jar
-file.reference.swingx-painters-1.6.5-1.jar=/home/docker/Documents/Projectos/CCS/ccsidart/lib/swingx-painters-1.6.5-1.jar
-file.reference.swingx-plaf-1.6.5-1.jar=/home/docker/Documents/Projectos/CCS/ccsidart/lib/swingx-plaf-1.6.5-1.jar
-file.reference.swingx-ws.jar=/home/docker/Documents/Projectos/CCS/ccsidart/lib/swingx-ws.jar
-file.reference.swt_gtk_x86_64-3.3.0-v3346.jar=/home/docker/Documents/Projectos/CCS/ccsidart/lib/swt_gtk/swt_gtk_x86_64-3.3.0-v3346.jar
+file.reference.swingx-action-1.6.5-1.jar=lib\\swingx-action-1.6.5-1.jar
+file.reference.swingx-autocomplete-1.6.5-1.jar=lib\\swingx-autocomplete-1.6.5-1.jar
+file.reference.swingx-common-1.6.5-1.jar=lib\\swingx-common-1.6.5-1.jar
+file.reference.swingx-core-1.6.5-1.jar=lib\\swingx-core-1.6.5-1.jar
+file.reference.swingx-graphics-1.6.5-1.jar=lib\\swingx-graphics-1.6.5-1.jar
+file.reference.swingx-painters-1.6.5-1.jar=lib\\swingx-painters-1.6.5-1.jar
+file.reference.swingx-plaf-1.6.5-1.jar=lib\\swingx-plaf-1.6.5-1.jar
+file.reference.swingx-ws.jar=lib\\swingx-ws.jar
+file.reference.swt_64bit.jar=lib\\swt_64bit.jar
 file.reference.swtjasperviewer-1.1.0.jar=lib\\swtjasperviewer-1.1.0.jar
 file.reference.syndiag2.jar=lib\\syndiag2.jar
 file.reference.testng.jar=lib\\testng.jar
@@ -185,7 +185,6 @@ javac.classpath=\
     ${file.reference.hibernate3.jar}:\
     ${libs.eclipselink.classpath}:\
     ${file.reference.mysql-connector-java-5.1.45-bin.jar}:\
-    ${file.reference.swt_gtk_x86_64-3.3.0-v3346.jar}:\
     ${file.reference.swingx-action-1.6.5-1.jar}:\
     ${file.reference.swingx-autocomplete-1.6.5-1.jar}:\
     ${file.reference.swingx-common-1.6.5-1.jar}:\
@@ -193,7 +192,8 @@ javac.classpath=\
     ${file.reference.swingx-graphics-1.6.5-1.jar}:\
     ${file.reference.swingx-painters-1.6.5-1.jar}:\
     ${file.reference.swingx-plaf-1.6.5-1.jar}:\
-    ${file.reference.swingx-ws.jar}
+    ${file.reference.swingx-ws.jar}:\
+    ${file.reference.swt_64bit.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -223,7 +223,7 @@ main.class=org.celllife.idart.start.PharmacyApplication
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.7
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
