Actualizaca Regimes vs openmrs  - Analisa pacientes com mais de um frasco  - Efectua actualizacao com base na prescricao

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -106,7 +106,7 @@ file.reference.swingx-graphics-1.6.5-1.jar=lib\\swingx-graphics-1.6.5-1.jar
 file.reference.swingx-painters-1.6.5-1.jar=lib\\swingx-painters-1.6.5-1.jar
 file.reference.swingx-plaf-1.6.5-1.jar=lib\\swingx-plaf-1.6.5-1.jar
 file.reference.swingx-ws.jar=lib\\swingx-ws.jar
-file.reference.swt_64bit.jar=lib/swt_64bit.jar
+file.reference.swt_64bit.jar=lib\\swt_64bit.jar
 file.reference.swtjasperviewer-1.1.0.jar=lib\\swtjasperviewer-1.1.0.jar
 file.reference.syndiag2.jar=lib\\syndiag2.jar
 file.reference.testng.jar=lib\\testng.jar
